# maven_install_bzlmod_onoff

./: BUILD  MODULE.bazel  README.md  WORKSPACE  my_maven.json
